--- a/src/index.css
+++ b/src/index.css
@@ -7,38 +7,38 @@
 @tailwind utilities;
 
 nav a.active {
-    color: #3B82F6;
-    position: relative;
-    transition: all 0.3s ease;
+  color: #3b82f6;
+  position: relative;
+  transition: all 0.3s ease;
 }
 
 nav a.active::before {
-    content: '';
-    width: 100%;
-    background-color: #3B82F6;
-    height: 2px;
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    border-radius: 9999px;
-    transition: all 0.3s ease;
+  content: '';
+  width: 100%;
+  background-color: #3b82f6;
+  height: 2px;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  border-radius: 9999px;
+  transition: all 0.3s ease;
 }
 
 nav a {
-    transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 nav a:hover {
-    color: #3B82F6;
-    cursor: pointer;
+  color: #3b82f6;
+  cursor: pointer;
 }
 
 nav a.active:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 @layer components {
-    .navBarLink {
-        @apply before:w-0 hover:before:w-full before:bg-[#3B82F6] before:h-[2px] before:transition-all before:duration-300 before:absolute relative before:rounded-full before:bottom-[-2px] hover:text-[#3B82F6] transition-all duration-300 before:left-0 cursor-pointer capitalize;
-    }
+  .navBarLink {
+    @apply before:w-0 hover:before:w-full before:bg-[#3B82F6] before:h-[2px] before:transition-all before:duration-300 before:absolute relative before:rounded-full before:bottom-[-2px] hover:text-[#3B82F6] transition-all duration-300 before:left-0 cursor-pointer capitalize;
+  }
 }
